API Functions. pasrsing method created